--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <a class="navbar-brand" href="#">圆周率测试</a>
             </div>
             <div id="navbar">
-                <ul class="nav navbar-nav navbar-right">
+                <!--ul class="nav navbar-nav navbar-right">
                     <li>
                         <a href="https://yya.gs">短网址</a>
                     </li>
@@ -28,7 +28,7 @@
                     <li>
                         <a href="https://api.yya.gs/icp">备案查阅</a>
                     </li>
-                </ul>
+                </ul-->
             </div>
         </div>
     </nav>
@@ -152,7 +152,7 @@
     </div>
     <footer class="footer">
         <div class="text-center" style="margin-top:13px">
-            <a href="http://www.miitbeian.gov.cn/" rel="nofollow" target="_blank">备案号：滇ICP备17006976号-1</a>
+            <!--a href="http://www.miitbeian.gov.cn/" rel="nofollow" target="_blank">备案号：滇ICP备17006976号-1</a-->
         </div>
         <div style="position:absolute;bottom:15px;right:10px">
             &copy;2017 Yya.gs Corporation. All rights reserved.
