--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>π(PI) Calculate and Benchmark</title>
   <meta name="keywords" content="π,calculate,benchmark,pi,">
   <meta name="description" content="π(PI) Calculate and Benchmark">
   <link rel="stylesheet" href="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
-  <script type="module" crossorigin src="/pi-test/index.6d64aa36.js"></script>
-  <link rel="stylesheet" href="/pi-test/index.5868b31e.css">
+  <script type="module" crossorigin src="/pi-test/index.8a7226e2.js"></script>
+  <link rel="stylesheet" href="/pi-test/index.21ab28de.css">
 </head>
 
 <body>
