--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>π(PI) Calculate and Benchmark</title>
   <meta name="keywords" content="π,calculate,benchmark,pi,">
   <meta name="description" content="π(PI) Calculate and Benchmark">
