--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <meta name="keywords" content="π,calculate,benchmark,pi,">
   <meta name="description" content="π(PI) Calculate and Benchmark">
   <link rel="stylesheet" href="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/twitter-bootstrap/3.4.1/css/bootstrap.min.css">
-  <script type="module" crossorigin src="/pi-test/index.2f939c7d.js"></script>
-  <link rel="stylesheet" href="/pi-test/index.21ab28de.css">
+  <script type="module" crossorigin src="/pi-calculate-benchmark/index.2f939c7d.js"></script>
+  <link rel="stylesheet" href="/pi-calculate-benchmark/index.21ab28de.css">
 </head>
 
 <body>
